--- a/projects/web/app/views/_layout/body_layout.html
+++ b/projects/web/app/views/_layout/body_layout.html
@@ -228,7 +228,7 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h4 class="modal-title">&{'crud.processing'}</h4>
+                <h4 class="modal-title" id="pleaseWaitDialogMessage">&{'crud.processing'}</h4>
             </div>
             <div class="modal-body">
                 <div class="progress progress-striped active" style="margin-bottom:0;">
