--- a/projects/web/app/views/guest/InstanceController/list.html
+++ b/projects/web/app/views/guest/InstanceController/list.html
@@ -13,11 +13,16 @@
 
 <br>
 
-#{crud.table fields: ['executor.name', 'cloudInstanceName', 'cloudInstanceIp',
+#{crud.table fields: ['executor.name', 'workflowNode.workflow.name', 'cloudInstanceName', 'cloudInstanceIp',
             'plugin.name', 'price', 'creationDate', 'phase', 'status']}
 
     #{crud.custom 'executor.name'}
         <a href="@{show(object._key())}">${object.executor.name}</a>
+    #{/crud.custom}
+    #{crud.custom 'workflowNode.workflow.name'}
+        #{if object.workflowNode != null}
+            ${object.workflowNode.workflow.name}
+        #{/if}
     #{/crud.custom}
     #{crud.custom 'plugin.name'}
         ${object.plugin.name}
